Bug 872947 - Release pseudostack when unregister thread. r=snorp